--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,15 @@ html {
         margin-right: 10px;
     }
 
+    .container-right {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .container-left {
+        width: 100%;
+    }
+
 }
 
 /* END NAVBAR */
@@ -121,7 +130,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    height: 600px;
+    height: 599px;
 }
 
 .content {
@@ -171,7 +180,7 @@ html {
 
 
 .fotbar {
-    position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
     right: 0;
@@ -200,19 +209,19 @@ html {
 
 .main-absensi {
     padding: 20px;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
 }
 
 .main-absensi-top {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
-    min-height: 500px;
+    margin-bottom: 8px;
+    min-height: 551px;
 }
 
 .main-absensi-top h3 {
     color: black;
-    background-color: #e9e9e9;
+    background-color: #dad7d7;
     /* width: 100%; */
     height: 45px;
     display: flex;
@@ -222,20 +231,23 @@ html {
 }
 
 .container-left {
-    width: 70%;
+    width: 71%;
     background-color: white;
 }
 
 .container-left table {
-    width: 100%;
+    width: 70%;
     border-collapse: collapse;
 }
-
+.container-left th {
+    align-items: center;
+    text-align: center;
+}
 .container-left th,
 .container-left td {
     padding: 10px;
-    text-align: left;
-    border-bottom: 1px solid #ccc;
+    border: 1px solid #ccc;
+    /* border-bottom: 1px solid #ccc; */
 }
 
 .container-left th {
@@ -260,7 +272,7 @@ html {
 .container-right form {
     display: grid;
     grid-template-columns: max-content 1fr;
-    gap: 10px;
+    gap: 15px;
     padding: 0 20px 0 20px;
 }
 
@@ -293,34 +305,121 @@ html {
     cursor: pointer;
 }
 
+@media (max-width: 767px) {
+    .main-absensi-top {
+        flex-direction: column;
+    }
 
-.container-bottom {
-    margin-top: 20px;
-    padding: 20px;
-    background-color: #f2f2f2;
+    .container-right {
+        width: 100%;
+        margin-bottom: 20px;
+        order: 1;
+        padding-bottom: 16px;
+    }
+
+    .container-left {
+        width: 100%;
+        order: 2;
+    }
 }
 
-.container-bottom table {
-    width: 100%;
-    border-collapse: collapse;
+
+.content-login {
+    display: flex;
+    justify-content: center;
 }
 
-.container-bottom th,
-.container-bottom td {
+.form-group-login {
+    margin-top: 10px;
+}
+
+.input-icon {
+    display: flex;
+    justify-content: center;
+}
+
+.input-icon .icon-login {
     padding: 10px;
-    text-align: left;
+    background-color: #f2f2f2;
     border: 1px solid #ccc;
+    border-radius: 5px 0 0 5px;
 }
 
-.container-bottom th {
-    background-color: #f9f9f9;
-    font-weight: bold;
-}
-
-.container-bottom tbody tr:nth-child(even) {
+.form-group-login label,
+.form-group-login input[type="text"],
+.form-group-login input[type="email"],
+.form-group-login input[type="password"],
+.form-group-login select {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 0 5px 5px 0;
     background-color: #ffffff;
 }
 
-.container-bottom tbody tr:hover {
-    background-color: #eaf2ff;
+.form-group-login input[type="text"]:focus,
+.form-group-login input[type="email"]:focus,
+.form-group-login input[type="password"]:focus {
+    border-color: #007bff;
+    border-width: 2px;
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+
+.button-container {
+    display: flex;
+}
+
+.button-container button {
+    flex: 1;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 15px;
+}
+
+.login-button {
+    background-color: #1D5B79;
+    color: white;
+    margin-right: 10px;
+}
+
+.login-button:hover {
+    transition: ease 0.2s;
+    background-color: #2d8ab8;
+}
+
+.signup-button {
+    background-color: #f2b500;
+    color: black;
+}
+
+.signup-button:hover {
+    transition: ease 0.2s;
+    background-color: #ffca2a;
+}
+
+.login-link {
+    margin-top: 10px;
+    text-align: right;
+    font-size: 12px;
+}
+
+.login-link a {
+    color: #1D5B79;
+    text-decoration: none;
+}
+
+.login-link a:hover {
+    text-decoration: underline;
+    color: #004b70;
+}
+
+@media (max-width: 600px) {
+    .table-swipe {
+        display: block;
+        overflow-x: auto;
+    }
 }
